--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <title>Data Lovers P-Go</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header></header>
-    <main></main>
+</head>
+<body>
+    <header id="header"></header>
+    <main>
+        <section class="login" id="login" action="">
+            <img src="img/pgo_logo.png" alt="pokemonGoLogo">
+            <div id="loginInput">
+                <label for="email">Correo electrónico:</label>
+                <input id="email" type="email">
+                <label for="password">Contraseña:</label>
+                <input id="password" type="password">
+                <p>¿Olvidaste tu contraseña?</p>
+                <button id="btnLogin">Ingresa</button>
+                <p>¿No tienes una cuenta? Regístrate</p>
+            </div>
+        </section>
+        <nav id="myPokemonPics"></nav>
+    </main>
     <footer></footer>
-     <script src="./data/pokemon/pokemon.js"></script>
+    <script src="./data/pokemon/pokemon.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
