--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+	<head>
     <meta charset="utf-8">
     <title>Data Lovers P-Go</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header id="header"></header>
     <main>
         <section class="login" id="login" action="">
             <img src="img/pgo_logo.png" alt="pokemonGoLogo">
-            <div id="loginInput">
-                <label for="email">Correo electrónico:</label>
-                <input id="email" type="email">
-                <label for="password">Contraseña:</label>
-                <input id="password" type="password">
-                <p>¿Olvidaste tu contraseña?</p>
-                <button id="btnLogin">Ingresa</button>
-                <p>¿No tienes una cuenta? Regístrate</p>
+            <div>
+                <div class="loginInput">
+                        <label for="email">Correo electrónico:</label>
+                        <input class="user" id="email" name="email" type="text">
+                        <label for="password">Contraseña:</label>
+                        <input class="user" id="password" name="password" type="password">
+												<p class="forgotPassword"><b>¿Olvidaste tu contraseña?</b></p>				
+								</div>
+                <div class="loginInput">
+										<p id="message" class="hide"></p>
+                        <button class="btnLogin" id="btnLogin"><b>INGRESA</b></button>
+                        <p class="register">¿No tienes una cuenta?
+													<b>Regístrate</b> 
+												</p>
+                </div>   
             </div>
         </section>
         <nav id="myPokemonPics"></nav>
@@ -28,5 +35,4 @@
     <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
-
 </html>
