read me sprint 1 closes #8

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,23 @@
                 </div>   
             </div>
         </section>
+        <div class="contenedor">
+            <button class="botonF1">
+              <span>+</span>
+            </button>
+            <button class="btn botonF2">
+              <span>+</span>
+            </button>
+            <button class="btn botonF3">
+              <span>+</span>
+            </button>
+            <button class="btn botonF4">
+              <span>+</span>
+            </button>
+            <button class="btn botonF5">
+              <span>+</span>
+            </button>
+             </div>
         <nav id="myPokemonPics"></nav>
     </main>
     <footer></footer>
