read me sprint 1 close #8

--- a/src/index.html
+++ b/src/index.html
@@ -28,20 +28,20 @@
                 </div>   
             </div>
         </section>
-        <div class="contenedor">
-            <button class="botonF1">
+        <div class="contenedor hide" id="contenedor">
+            <button class="botonF1" id="btn1">
               <span>+</span>
             </button>
-            <button class="btn botonF2">
-              <span>+</span>
+            <button class="btn botonF2" id="btn2">
+              <span>A-Z</span>
             </button>
-            <button class="btn botonF3">
-              <span>+</span>
+            <button class="btn botonF3" id="btn3">
+              <span>Z-A</span>
             </button>
-            <button class="btn botonF4">
-              <span>+</span>
+            <button class="btn botonF4" id="btn4">
+              <span>Spawn </span>
             </button>
-            <button class="btn botonF5">
+            <button class="btn botonF5" id="btn5">
               <span>+</span>
             </button>
              </div>
