fin sprint1/ inicio sprint2

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="es">
 	<head>
     <meta charset="utf-8">
     <title>Data Lovers P-Go</title>
@@ -9,7 +10,7 @@
 <body>
     <header id="header"></header>
     <main>
-        <section class="login" id="login" action="">
+        <section class="login" id="login">
             <img src="img/pgo_logo.png" alt="pokemonGoLogo">
             <div>
                 <div class="loginInput">
