inicio de trabajo en funciones H3

--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,12 @@
               <span>+</span>
             </button>
              </div>
-        <nav id="my-pokemon-pics"></nav>
+        <nav class="my-pokemon-pics" id="my-pokemon-pics"></nav>
     </main>
     <footer></footer>
     <script src="./data/pokemon/pokemon.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
+    <script src="card.js"></script>
 </body>
 </html>
