boton huevo,funciones de filtrado y ordenado en botones y pantalla, close #22, close #24, close #25, close #27, close #28, close #29

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
             </div>
         </section>
         <nav class="my-pokemon-pics" id="my-pokemon-pics"></nav>
+        <nav class="new-data" id="new-data"></nav>
         <aside>
           <aside class="contenedor1 hide" id="contenedor1">
             <button class="boton1" id="btn1">
