boton not in eggs y fondos por tipo

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,8 @@
             </button>
             <button class="btn boton10km" id="btn10km">
             </button>
+            <button class="btn notInEggs" id="notInEggs">
+            </button>
           </aside>
           <aside class="contenedor3 typ hide" id="contenedor3">
             <button class="Types" id="types">
