--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             </button>
           </aside>
           <aside class="contenedor2 hide " id="contenedor2">
-            <button class="botonHuevo" id="btnh">
+            <button class="boton-huevo" id="btnh">
             </button>
             <button class="btn boton2km" id="btn2km">
             </button>
@@ -55,89 +55,89 @@
             </button>
             <button class="btn boton10km" id="btn10km">
             </button>
-            <button class="btn notInEggs" id="notInEggs">
+            <button class="btn not-in-eggs" id="not-in-eggs">
             </button>
           </aside>
           <aside class="contenedor3 typ hide" id="contenedor3">
-            <button class="Types" id="types">
+            <button class="types" id="types">
               <span>Tipos</span>
             </button>
-            <button class="btn Bug" id="bug">
+            <button class="btn bug" id="bug">
             </button>
-            <button class="btn Dark" id="dark">
+            <button class="btn dark" id="dark">
             </button>
-            <button class="btn Dragon" id="dragon">
+            <button class="btn dragon" id="dragon">
             </button>
-            <button class="btn Electric" id="electric">
+            <button class="btn electric" id="electric">
             </button>
-            <button class="btn Fairy" id="fairy">
+            <button class="btn fairy" id="fairy">
             </button>
-            <button class="btn Fighting" id="fighting">
+            <button class="btn fighting" id="fighting">
             </button>
-            <button class="btn Fire" id="fire">
+            <button class="btn fire" id="fire">
             </button>
-            <button class="btn Flying" id="flying">
+            <button class="btn flying" id="flying">
             </button>
-            <button class="btn Ghost" id="ghost">
+            <button class="btn ghost" id="ghost">
             </button>
-            <button class="btn Grass" id="grass">
+            <button class="btn grass" id="grass">
             </button>
-            <button class="btn Ground" id="ground">
+            <button class="btn ground" id="ground">
             </button>
-            <button class="btn Ice" id="ice">
+            <button class="btn ice" id="ice">
             </button>
-            <button class="btn Normal" id="normal">
+            <button class="btn normal" id="normal">
             </button>
-            <button class="btn Poison" id="poison">
+            <button class="btn poison" id="poison">
             </button>
-            <button class="btn Psychic" id="psychic">
+            <button class="btn psychic" id="psychic">
             </button>
-            <button class="btn Rock" id="rock">
+            <button class="btn rock" id="rock">
             </button>
-            <button class="btn Steel" id="steel">
+            <button class="btn steel" id="steel">
             </button>
-            <button class="btn Water" id="water">
+            <button class="btn water" id="water">
             </button>           
           </aside>
           <aside class="contenedor4 deb hide" id="contenedor4">
-            <button class="Types" id="weakness">
+            <button class="types" id="weakness">
               <span>Debilidades</span>
             </button>
-            <button class="btn Bug" id="bugw">
+            <button class="btn bug" id="bugw">
             </button>
-            <button class="btn Dark" id="darkw">
+            <button class="btn dark" id="darkw">
             </button>
-            <button class="btn Dragon" id="dragonw">
+            <button class="btn dragon" id="dragonw">
             </button>
-            <button class="btn Electric" id="electricw">
+            <button class="btn electric" id="electricw">
             </button>
-            <button class="btn Fairy" id="fairyw">
+            <button class="btn fairy" id="fairyw">
             </button>
-            <button class="btn Fighting" id="fightingw">
+            <button class="btn fighting" id="fightingw">
             </button>
-            <button class="btn Fire" id="firew">
+            <button class="btn fire" id="firew">
             </button>
-            <button class="btn Flying" id="flyingw">
+            <button class="btn flying" id="flyingw">
             </button>
-            <button class="btn Ghost" id="ghostw">
+            <button class="btn ghost" id="ghostw">
             </button>
-            <button class="btn Grass" id="grassw">
+            <button class="btn grass" id="grassw">
             </button>
-            <button class="btn Ground" id="groundw">
+            <button class="btn ground" id="groundw">
             </button>
-            <button class="btn Ice" id="icew">
+            <button class="btn ice" id="icew">
             </button>
-            <button class="btn Normal" id="normalw">
+            <button class="btn normal" id="normalw">
             </button>
-            <button class="btn Poison" id="poisonw">
+            <button class="btn poison" id="poisonw">
             </button>
-            <button class="btn Psychic" id="psychicw">
+            <button class="btn psychic" id="psychicw">
             </button>
-            <button class="btn Rock" id="rockw">
+            <button class="btn rock" id="rockw">
             </button>
-            <button class="btn Steel" id="steelw">
+            <button class="btn steel" id="steelw">
             </button>
-            <button class="btn Water" id="waterw">
+            <button class="btn water" id="waterw">
             </button>           
           </aside>
         </aside>
