--- a/src/index.html
+++ b/src/index.html
@@ -1,148 +1,148 @@
 <!DOCTYPE html>
 
-<html class="wrap margin-auto" lang="es">
+<html class="wrap m-auto" lang="es">
 <head>
   <meta charset="utf-8">
   <title>Data Lovers P-Go</title>
   <link rel="stylesheet" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body class="wrap cover margin-auto">
-    <header class="wrap  margin-auto fixed" id="header"></header>
-    <main>
-        <section class="login column" id="login">
+<body class="wrap cover m-auto">
+    <header class="wrap center-t m-auto fixed calibri white z-index5" id="header"></header>
+    <main class="wrap">
+        <section class="login column white" id="login">
             <img class="logo" src="img/pgo_logo.png" alt="pokemonGoLogo">
             <div>
-              <div class="login-input column">
+              <div class="login-input column calibri">
                 <label for="email">Correo electrónico:</label>
                 <input class="user" id="email" name="email" type="text">
                 <label for="password">Contraseña:</label>
-                <input class="user" id="password" name="password" type="password">
+                <input class="user b-radius4 font16" id="password" name="password" type="password">
                 <p class="forgot-password"><b>¿Olvidaste tu contraseña?</b></p>				
               </div>
-                <div class="login-input column">
-                  <p id="message" class="hide"></p>
-                  <button class="btn-login" id="btn-login"><b>INGRESA</b></button>
-                  <p class="register">¿No tienes una cuenta?<b>Regístrate</b></p>
+                <div class="login-input column calibri">
+                  <p  class="center-s" id="message" class="hide"></p>
+                  <button class="btn-login b-radius4 font16 white" id="btn-login"><b>INGRESA</b></button>
+                  <p class="register center-s">¿No tienes una cuenta?<b>Regístrate</b></p>
                 </div>   
             </div>
         </section>
         <nav class="my-pokemon-pics wrap" id="my-pokemon-pics"></nav>
         <nav class="new-data wrap" id="new-data"></nav>
         <aside>
-          <aside class="contenedor1 hide fixed" id="contenedor1">
-            <button class="boton1 cover radius100 active" id="btn-pokeball">
+          <aside class="contenedor1 hide fixed right0 bottom0 z-index6 width70" id="contenedor1">
+            <button class="boton1 cover absolute shadow active right0 bottom0 b-radius100 white z-index6 butt-size border-white m-bottom16" id="btn-pokeball">
             </button>
-            <button class="btn radius100 boton2 ordenar1" id="btnza">
+            <button class="btn boton2 absolute shadow m-right18 right0 bottom0 b-radius100 transition05 white bgdred border-black m-bottom70" id="btnza">
               <span>Z-a</span>
             </button>
-            <button class="btn radius100 boton3 ordenar1" id="btnaz">
+            <button class="btn boton3 absolute shadow m-right18 right0 bottom0 b-radius100 transition07 white bgdred border-white m-bottom114" id="btnaz">
               <span>A-z</span>
             </button>
-            <button class="btn radius100 boton4 ordenar1" id="btnfup">
+            <button class="btn boton4 absolute shadow m-right18 right0 bottom0 b-radius100 transition09 white bgdred border-black m-bottom158" id="btnfup">
               <span>F &uarr;</span>
             </button>
-            <button class="btn radius100 boton5 ordenar1" id="btnfdown">
+            <button class="btn boton5 absolute shadow m-right18 right0 bottom0 b-radius100 transition09 white bgdred border-white m-bottom203" id="btnfdown">
               <span>F &darr;</span>
             </button>
           </aside>
-          <aside class="contenedor2 hide fixed" id="contenedor2">
-            <button class="boton-huevo radius100 cover active" id="btnh">
+          <aside class="contenedor2 hide fixed bottom0 z-index7 width70" id="contenedor2">
+            <button class="boton-huevo cover absolute shadow active right0 bottom0 b-radius100 z-index7 butt-size border-black m-bottom16" id="btnh">
             </button>
-            <button class="btn radius100 boton2km cover" id="btn2km">
+            <button class="btn boton2km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition05 m-bottom70" id="btn2km">
             </button>
-            <button class="btn radius100 boton5km cover" id="btn5km">
+            <button class="btn boton5km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition07 m-bottom114" id="btn5km">
             </button>
-            <button class="btn radius100 boton10km cover" id="btn10km">
+            <button class="btn boton10km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition09 m-bottom158" id="btn10km">
             </button>
-            <button class="btn radius100 not-in-eggs cover" id="not-in-eggs">
+            <button class="btn not-in-eggs cover absolute shadow m-right13 right0 bottom0 b-radius100 transition09 m-bottom203" id="not-in-eggs">
             </button>
           </aside>
-          <aside class="contenedor3 typ hide fixed" id="contenedor3">
-            <button class="types active" id="types">
+          <aside class="contenedor3 typ hide fixed bottom0 z-index6 cont-size" id="contenedor3">
+            <button class="types absolute shadow active font14 z-index6" id="types">
               <span>Tipos</span>
             </button>
-            <button class="btn radius100 bug m-right0 cover" id="bug">
+            <button class="btn bug cover absolute shadow m-right0 right0 bottom0 b-radius100 transition05 m-bottom60" id="bug">
             </button>
-            <button class="btn radius100 dark m-right0 cover" id="dark">
+            <button class="btn dark cover absolute shadow m-right0 right0 bottom0 b-radius100 transition07 m-bottom105" id="dark">
             </button>
-            <button class="btn radius100 dragon m-right0 cover" id="dragon">
+            <button class="btn dragon cover absolute shadow m-right0 right0 bottom0 b-radius100 transition09 m-bottom150" id="dragon">
             </button>
-            <button class="btn radius100 electric m-right0 cover" id="electric">
+            <button class="btn electric cover absolute shadow m-right0 right0 bottom0 b-radius100 transition11 m-bottom195" id="electric">
             </button>
-            <button class="btn radius100 fairy m-right0 cover" id="fairy">
+            <button class="btn fairy cover absolute shadow m-right0 right0 bottom0 b-radius100 transition13 m-bottom240" id="fairy">
             </button>
-            <button class="btn radius100 fighting m-right0 cover" id="fighting">
+            <button class="btn fighting cover absolute shadow m-right0 right0  bottom0 b-radius100 transition15 m-bottom285" id="fighting">
             </button>
-            <button class="btn radius100 fire m-right45 cover" id="fire">
+            <button class="btn fire cover absolute shadow m-right45 right0  bottom0 b-radius100 transition05 m-bottom60" id="fire">
             </button>
-            <button class="btn radius100 flying m-right45 cover" id="flying">
+            <button class="btn flying cover absolute shadow m-right45 right0 bottom0 b-radius100 transition07 m-bottom105" id="flying">
             </button>
-            <button class="btn radius100 ghost m-right45 cover" id="ghost">
+            <button class="btn ghost cover absolute shadow m-right45 right0 bottom0 b-radius100 transition09 m-bottom150" id="ghost">
             </button>
-            <button class="btn radius100 grass m-right45 cover" id="grass">
+            <button class="btn grass cover absolute shadow m-right45 right0 bottom0 b-radius100 transition11 m-bottom195" id="grass">
             </button>
-            <button class="btn radius100 ground m-right45 cover" id="ground">
+            <button class="btn ground cover absolute shadow m-right45 right0 bottom0 b-radius100 transition13 m-bottom240" id="ground">
             </button>
-            <button class="btn radius100 ice m-right45 cover" id="ice">
+            <button class="btn ice cover absolute shadow m-right45 right0 bottom0 b-radius100 transition15 m-bottom285" id="ice">
             </button>
-            <button class="btn radius100 normal cover" id="normal">
+            <button class="btn normal cover absolute shadow m-right90 right0 bottom0 b-radius100 transition05 m-bottom60" id="normal">
             </button>
-            <button class="btn radius100 poison cover" id="poison">
+            <button class="btn poison cover absolute shadow m-right90 right0 bottom0 b-radius100 transition07 m-bottom105" id="poison">
             </button>
-            <button class="btn radius100 psychic cover" id="psychic">
+            <button class="btn psychic cover absolute shadow m-right90 right0 bottom0 b-radius100 transition09 m-bottom150" id="psychic">
             </button>
-            <button class="btn radius100 rock cover" id="rock">
+            <button class="btn rock cover absolute shadow m-right90 right0 bottom0 b-radius100 transition11 m-bottom195" id="rock">
             </button>
-            <button class="btn radius100 steel cover" id="steel">
+            <button class="btn steel cover absolute shadow m-right90 right0 bottom0 b-radius100 transition13 m-bottom240" id="steel">
             </button>
-            <button class="btn radius100 water cover" id="water">
+            <button class="btn water cover absolute shadow m-right90 right0 bottom0 b-radius100 transition15 m-bottom285" id="water">
             </button>           
           </aside>
-          <aside class="contenedor4 deb hide fixed" id="contenedor4">
-            <button class="types" id="weakness">
+          <aside class="contenedor4 deb hide fixed bottom0 z-index6 cont-size" id="contenedor4">
+            <button class="types absolute shadow active font14 z-index6" id="weakness">
               <span>Debilidades</span>
             </button>
-            <button class="btn radius100 bug m-right0 cover" id="bugw">
+            <button class="btn bug cover absolute shadow m-right0 right0 bottom0 b-radius100 transition05 m-bottom60" id="bugw">
             </button>
-            <button class="btn radius100 dark m-right0 cover" id="darkw">
+            <button class="btn dark cover absolute shadow m-right0 right0 bottom0 b-radius100 transition07 m-bottom105" id="darkw">
             </button>
-            <button class="btn radius100 dragon m-right0 cover" id="dragonw">
+            <button class="btn dragon cover absolute shadow m-right0 right0 bottom0 b-radius100 transition09 m-bottom150" id="dragonw">
             </button>
-            <button class="btn radius100 electric m-right0 cover" id="electricw">
+            <button class="btn electric cover absolute shadow m-right0 right0 bottom0 b-radius100 transition11 m-bottom195" id="electricw">
             </button>
-            <button class="btn radius100 fairy m-right0 cover" id="fairyw">
+            <button class="btn fairy cover absolute shadow m-right0 right0 bottom0 b-radius100 transition13 m-bottom240" id="fairyw">
             </button>
-            <button class="btn radius100 fighting m-right0 cover" id="fightingw">
+            <button class="btn fighting cover absolute shadow m-right0 right0 bottom0 b-radius100 transition15 m-bottom285" id="fightingw">
             </button>
-            <button class="btn radius100 fire m-right45 cover" id="firew">
+            <button class="btn fire cover absolute shadow m-right45 right0 bottom0 b-radius100 transition05 m-bottom60" id="firew">
             </button>
-            <button class="btn radius100 flying m-right45 cover" id="flyingw">
+            <button class="btn flying cover absolute shadow m-right45 right0 bottom0 b-radius100 transition07 m-bottom105" id="flyingw">
             </button>
-            <button class="btn radius100 ghost m-right45 cover" id="ghostw">
+            <button class="btn ghost cover absolute shadow m-right45 right0 bottom0 b-radius100 transition09 m-bottom150" id="ghostw">
             </button>
-            <button class="btn radius100 grass m-right45 cover" id="grassw">
+            <button class="btn grass cover absolute shadow m-right45 right0 bottom0 b-radius100 transition11 m-bottom195" id="grassw">
             </button>
-            <button class="btn radius100 ground m-right45 cover" id="groundw">
+            <button class="btn ground cover absolute shadow m-right45 right0 bottom0 b-radius100 transition13 m-bottom240" id="groundw">
             </button>
-            <button class="btn radius100 ice m-right45 cover" id="icew">
+            <button class="btn ice cover absolute shadow m-right45 right0 bottom0 b-radius100 transition15 m-bottom285" id="icew">
             </button>
-            <button class="btn radius100 normal cover" id="normalw">
+            <button class="btn normal cover absolute shadow m-right90 right0 bottom0 b-radius100 transition05 m-bottom60" id="normalw">
             </button>
-            <button class="btn radius100 poison cover" id="poisonw">
+            <button class="btn poison cover absolute shadow m-right90 right0 bottom0 b-radius100 transition07 m-bottom105" id="poisonw">
             </button>
-            <button class="btn radius100 psychic cover" id="psychicw">
+            <button class="btn psychic cover absolute shadow m-right90 right0 bottom0 b-radius100 transition09 m-bottom150" id="psychicw">
             </button>
             <button class="btn radius100 rock cover" id="rockw">
             </button>
-            <button class="btn radius100 steel cover" id="steelw">
+            <button class="btn steel cover absolute shadow m-right90 right0 bottom0 b-radius100 transition13 m-bottom240" id="steelw">
             </button>
-            <button class="btn radius100 water cover" id="waterw">
+            <button class="btn water cover absolute shadow m-right90 right0 bottom0 b-radius100 transition15 m-bottom285" id="waterw">
             </button>           
           </aside>
         </aside>
         <section class="card hide column" id="card"></section>
-        <button class="home radius100 hide fixed active" id="home"></button>
+        <button class="home hide cover shadow active fixed bottom0 b-radius100 z-index6 butt-size m-bottom16" id="home"></button>
     </main>
     <footer></footer>
     <script src="./data/pokemon/pokemon.js"></script>
