--- a/src/index.html
+++ b/src/index.html
@@ -2,26 +2,26 @@
 
 <html class="wrap m-auto" lang="es">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
   <title>Data Lovers P-Go</title>
   <link rel="stylesheet" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="wrap cover m-auto">
     <header class="wrap center-t m-auto fixed calibri white z-index5" id="header"></header>
     <main class="wrap">
         <section class="login column white" id="login">
-            <img class="logo" src="img/pgo_logo.png" alt="pokemonGoLogo">
+            <img class="logo" src="img/pgo_logo.png" alt="pokemonGoLogo"/>
             <div>
               <div class="login-input column calibri">
                 <label for="email">Correo electrónico:</label>
-                <input class="user" id="email" name="email" type="text">
+                <input class="user" id="email" name="email" type="text"/>
                 <label for="password">Contraseña:</label>
-                <input class="user b-radius4 font16" id="password" name="password" type="password">
+                <input class="user b-radius4 font16" id="password" name="password" type="password"/>
                 <p class="forgot-password"><b>¿Olvidaste tu contraseña?</b></p>				
               </div>
                 <div class="login-input column calibri">
-                  <p  class="center-s" id="message" class="hide"></p>
+                  <p id="message" class="hide center-s"></p>
                   <button class="btn-login b-radius4 font16 white" id="btn-login"><b>INGRESA</b></button>
                   <p class="register center-s">¿No tienes una cuenta?<b>Regístrate</b></p>
                 </div>   
