refactorizando código y botones1

--- a/src/index.html
+++ b/src/index.html
@@ -49,95 +49,94 @@
           <aside class="contenedor2 hide fixed bottom0 z-index7 width70" id="contenedor2">
             <button class="boton-huevo cover absolute shadow active right0 bottom0 b-radius100 z-index7 butt-size border-black m-bottom16" id="btnh">
             </button>
-            <button class="btn boton2km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition05 m-bottom70" id="btn2km">
+            <button class="btn boton2km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition05 m-bottom70" value="2 km" id="btn2km">
             </button>
-            <button class="btn boton5km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition07 m-bottom114" id="btn5km">
+            <button class="btn boton5km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition07 m-bottom114" value="5 km" id="btn5km">
             </button>
-            <button class="btn boton10km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition09 m-bottom158" id="btn10km">
+            <button class="btn boton10km cover absolute shadow m-right13 right0 bottom0 b-radius100 transition09 m-bottom158" value="10 km" id="btn10km">
             </button>
-            <button class="btn not-in-eggs cover absolute shadow m-right13 right0 bottom0 b-radius100 transition09 m-bottom203" id="not-in-eggs">
+            <button class="btn not-in-eggs cover absolute shadow m-right13 right0 bottom0 b-radius100 transition09 m-bottom203" value="Not in Eggs" id="not-in-eggs">
             </button>
           </aside>
           <aside class="contenedor3 typ hide fixed bottom0 z-index6 cont-size" id="contenedor3">
-            <button class="types absolute shadow active font14 z-index6" id="types">
-              <span>Tipos</span>
+            <button class="types absolute shadow active font14 z-index6" id="types"><span>Tipos</span>
             </button>
-            <button class="btn bug cover absolute shadow m-right0 right0 bottom0 b-radius100 transition05 m-bottom60" id="bug">
+            <button class="btn bug cover absolute shadow m-right0 right0 bottom0 b-radius100 transition05 m-bottom60" value="Bug" id="bug">
             </button>
-            <button class="btn dark cover absolute shadow m-right0 right0 bottom0 b-radius100 transition07 m-bottom105" id="dark">
+            <button class="btn dark cover absolute shadow m-right0 right0 bottom0 b-radius100 transition07 m-bottom105" value="Dark"  id="dark">
             </button>
-            <button class="btn dragon cover absolute shadow m-right0 right0 bottom0 b-radius100 transition09 m-bottom150" id="dragon">
+            <button class="btn dragon cover absolute shadow m-right0 right0 bottom0 b-radius100 transition09 m-bottom150" value="Dragon" id="dragon">
             </button>
-            <button class="btn electric cover absolute shadow m-right0 right0 bottom0 b-radius100 transition11 m-bottom195" id="electric">
+            <button class="btn electric cover absolute shadow m-right0 right0 bottom0 b-radius100 transition11 m-bottom195" value="Electric" id="electric">
             </button>
-            <button class="btn fairy cover absolute shadow m-right0 right0 bottom0 b-radius100 transition13 m-bottom240" id="fairy">
+            <button class="btn fairy cover absolute shadow m-right0 right0 bottom0 b-radius100 transition13 m-bottom240" value="Fairy" id="fairy">
             </button>
-            <button class="btn fighting cover absolute shadow m-right0 right0  bottom0 b-radius100 transition15 m-bottom285" id="fighting">
+            <button class="btn fighting cover absolute shadow m-right0 right0  bottom0 b-radius100 transition15 m-bottom285" value="Fighting" id="fighting">
             </button>
-            <button class="btn fire cover absolute shadow m-right45 right0  bottom0 b-radius100 transition05 m-bottom60" id="fire">
+            <button class="btn fire cover absolute shadow m-right45 right0  bottom0 b-radius100 transition05 m-bottom60" value="Fire" id="fire">
             </button>
-            <button class="btn flying cover absolute shadow m-right45 right0 bottom0 b-radius100 transition07 m-bottom105" id="flying">
+            <button class="btn flying cover absolute shadow m-right45 right0 bottom0 b-radius100 transition07 m-bottom105" value="Flying" id="flying">
             </button>
-            <button class="btn ghost cover absolute shadow m-right45 right0 bottom0 b-radius100 transition09 m-bottom150" id="ghost">
+            <button class="btn ghost cover absolute shadow m-right45 right0 bottom0 b-radius100 transition09 m-bottom150" value="Ghost" id="ghost">
             </button>
-            <button class="btn grass cover absolute shadow m-right45 right0 bottom0 b-radius100 transition11 m-bottom195" id="grass">
+            <button class="btn grass cover absolute shadow m-right45 right0 bottom0 b-radius100 transition11 m-bottom195" value="Grass" id="grass">
             </button>
-            <button class="btn ground cover absolute shadow m-right45 right0 bottom0 b-radius100 transition13 m-bottom240" id="ground">
+            <button class="btn ground cover absolute shadow m-right45 right0 bottom0 b-radius100 transition13 m-bottom240" value="Ground" id="ground">
             </button>
-            <button class="btn ice cover absolute shadow m-right45 right0 bottom0 b-radius100 transition15 m-bottom285" id="ice">
-            </button>
-            <button class="btn normal cover absolute shadow m-right90 right0 bottom0 b-radius100 transition05 m-bottom60" id="normal">
-            </button>
-            <button class="btn poison cover absolute shadow m-right90 right0 bottom0 b-radius100 transition07 m-bottom105" id="poison">
-            </button>
-            <button class="btn psychic cover absolute shadow m-right90 right0 bottom0 b-radius100 transition09 m-bottom150" id="psychic">
-            </button>
-            <button class="btn rock cover absolute shadow m-right90 right0 bottom0 b-radius100 transition11 m-bottom195" id="rock">
-            </button>
-            <button class="btn steel cover absolute shadow m-right90 right0 bottom0 b-radius100 transition13 m-bottom240" id="steel">
-            </button>
-            <button class="btn water cover absolute shadow m-right90 right0 bottom0 b-radius100 transition15 m-bottom285" id="water">
-            </button>           
+              <button class="btn ice cover absolute shadow m-right45 right0 bottom0 b-radius100 transition15 m-bottom285" value="Ice" id="ice">
+              </button>
+              <button class="btn normal cover absolute shadow m-right90 right0 bottom0 b-radius100 transition05 m-bottom60" value="Normal" id="normal">
+              </button>
+              <button class="btn poison cover absolute shadow m-right90 right0 bottom0 b-radius100 transition07 m-bottom105" value="Poison" id="poison">
+              </button>
+              <button class="btn psychic cover absolute shadow m-right90 right0 bottom0 b-radius100 transition09 m-bottom150" value="Psychic" id="psychic">
+              </button>
+              <button class="btn rock cover absolute shadow m-right90 right0 bottom0 b-radius100 transition11 m-bottom195" value="Rock" id="rock">
+              </button>
+              <button class="btn steel cover absolute shadow m-right90 right0 bottom0 b-radius100 transition13 m-bottom240" value="Steel" id="steel">
+              </button>
+              <button class="btn water cover absolute shadow m-right90 right0 bottom0 b-radius100 transition15 m-bottom285" value="Water" id="water">
+             </button>          
           </aside>
           <aside class="contenedor4 deb hide fixed bottom0 z-index6 cont-size" id="contenedor4">
             <button class="types absolute shadow active font14 z-index6" id="weakness">
               <span>Debilidades</span>
             </button>
-            <button class="btn bug cover absolute shadow m-right0 right0 bottom0 b-radius100 transition05 m-bottom60" id="bugw">
+            <button class="btn bug cover absolute shadow m-right0 right0 bottom0 b-radius100 transition05 m-bottom60"  value="Bug" id="bugw">
             </button>
-            <button class="btn dark cover absolute shadow m-right0 right0 bottom0 b-radius100 transition07 m-bottom105" id="darkw">
+            <button class="btn dark cover absolute shadow m-right0 right0 bottom0 b-radius100 transition07 m-bottom105" value="Dark" id="darkw">
             </button>
-            <button class="btn dragon cover absolute shadow m-right0 right0 bottom0 b-radius100 transition09 m-bottom150" id="dragonw">
+            <button class="btn dragon cover absolute shadow m-right0 right0 bottom0 b-radius100 transition09 m-bottom150" value="Dragon" id="dragonw">
             </button>
-            <button class="btn electric cover absolute shadow m-right0 right0 bottom0 b-radius100 transition11 m-bottom195" id="electricw">
+            <button class="btn electric cover absolute shadow m-right0 right0 bottom0 b-radius100 transition11 m-bottom195" value="Electric" id="electricw">
             </button>
-            <button class="btn fairy cover absolute shadow m-right0 right0 bottom0 b-radius100 transition13 m-bottom240" id="fairyw">
+            <button class="btn fairy cover absolute shadow m-right0 right0 bottom0 b-radius100 transition13 m-bottom240" value="Fairy" id="fairyw">
             </button>
-            <button class="btn fighting cover absolute shadow m-right0 right0 bottom0 b-radius100 transition15 m-bottom285" id="fightingw">
+            <button class="btn fighting cover absolute shadow m-right0 right0 bottom0 b-radius100 transition15 m-bottom285" value="Fightingw" id="fightingw">
             </button>
-            <button class="btn fire cover absolute shadow m-right45 right0 bottom0 b-radius100 transition05 m-bottom60" id="firew">
+            <button class="btn fire cover absolute shadow m-right45 right0 bottom0 b-radius100 transition05 m-bottom60" value="Fire" id="firew">
             </button>
-            <button class="btn flying cover absolute shadow m-right45 right0 bottom0 b-radius100 transition07 m-bottom105" id="flyingw">
+            <button class="btn flying cover absolute shadow m-right45 right0 bottom0 b-radius100 transition07 m-bottom105" value="Flying" id="flyingw">
             </button>
-            <button class="btn ghost cover absolute shadow m-right45 right0 bottom0 b-radius100 transition09 m-bottom150" id="ghostw">
+            <button class="btn ghost cover absolute shadow m-right45 right0 bottom0 b-radius100 transition09 m-bottom150" value="Ghost" id="ghostw">
             </button>
-            <button class="btn grass cover absolute shadow m-right45 right0 bottom0 b-radius100 transition11 m-bottom195" id="grassw">
+            <button class="btn grass cover absolute shadow m-right45 right0 bottom0 b-radius100 transition11 m-bottom195" value="Grass" id="grassw">
             </button>
-            <button class="btn ground cover absolute shadow m-right45 right0 bottom0 b-radius100 transition13 m-bottom240" id="groundw">
+            <button class="btn ground cover absolute shadow m-right45 right0 bottom0 b-radius100 transition13 m-bottom240" value="Ground" id="groundw">
             </button>
-            <button class="btn ice cover absolute shadow m-right45 right0 bottom0 b-radius100 transition15 m-bottom285" id="icew">
+            <button class="btn ice cover absolute shadow m-right45 right0 bottom0 b-radius100 transition15 m-bottom285" value="Ice" id="icew">
             </button>
-            <button class="btn normal cover absolute shadow m-right90 right0 bottom0 b-radius100 transition05 m-bottom60" id="normalw">
+            <button class="btn normal cover absolute shadow m-right90 right0 bottom0 b-radius100 transition05 m-bottom60" value="Normal" id="normalw">
             </button>
-            <button class="btn poison cover absolute shadow m-right90 right0 bottom0 b-radius100 transition07 m-bottom105" id="poisonw">
+            <button class="btn poison cover absolute shadow m-right90 right0 bottom0 b-radius100 transition07 m-bottom105" value="Poison" id="poisonw">
             </button>
-            <button class="btn psychic cover absolute shadow m-right90 right0 bottom0 b-radius100 transition09 m-bottom150" id="psychicw">
+            <button class="btn psychic cover absolute shadow m-right90 right0 bottom0 b-radius100 transition09 m-bottom150" value="Psychic" id="psychicw">
             </button>
-            <button class="btn radius100 rock cover" id="rockw">
+            <button class="btn rock cover absolute shadow m-right90 right0 bottom0 b-radius100 transition11 m-bottom195" value="Rock" id="rockw">
             </button>
-            <button class="btn steel cover absolute shadow m-right90 right0 bottom0 b-radius100 transition13 m-bottom240" id="steelw">
+            <button class="btn steel cover absolute shadow m-right90 right0 bottom0 b-radius100 transition13 m-bottom240" value="Steel" id="steelw">
             </button>
-            <button class="btn water cover absolute shadow m-right90 right0 bottom0 b-radius100 transition15 m-bottom285" id="waterw">
+            <button class="btn water cover absolute shadow m-right90 right0 bottom0 b-radius100 transition15 m-bottom285" value="Water" id="waterw">
             </button>           
           </aside>
         </aside>
