--- a/src/index.html
+++ b/src/index.html
@@ -33,16 +33,16 @@
           <aside class="contenedor1 hide fixed right0 bottom0 z-index6 width70" id="contenedor1">
             <button class="boton1 cover absolute shadow active right0 bottom0 b-radius100 white z-index6 butt-size border-white m-bottom16" id="btn-pokeball">
             </button>
-            <button class="btn boton2 absolute shadow m-right18 right0 bottom0 b-radius100 transition05 white bgdred border-black m-bottom70" id="btnza">
+            <button class="btn boton2 absolute shadow m-right18 right0 bottom0 b-radius100 transition05 white bgdred border-black m-bottom70" value="za" id="btnza">
               <span>Z-a</span>
             </button>
-            <button class="btn boton3 absolute shadow m-right18 right0 bottom0 b-radius100 transition07 white bgdred border-white m-bottom114" id="btnaz">
+            <button class="btn boton3 absolute shadow m-right18 right0 bottom0 b-radius100 transition07 white bgdred border-white m-bottom114" value="az" id="btnaz">
               <span>A-z</span>
             </button>
-            <button class="btn boton4 absolute shadow m-right18 right0 bottom0 b-radius100 transition09 white bgdred border-black m-bottom158" id="btnfup">
+            <button class="btn boton4 absolute shadow m-right18 right0 bottom0 b-radius100 transition09 white bgdred border-black m-bottom158" value="asc" id="btnfup">
               <span>F &uarr;</span>
             </button>
-            <button class="btn boton5 absolute shadow m-right18 right0 bottom0 b-radius100 transition09 white bgdred border-white m-bottom203" id="btnfdown">
+            <button class="btn boton5 absolute shadow m-right18 right0 bottom0 b-radius100 transition09 white bgdred border-white m-bottom203" value="des" id="btnfdown">
               <span>F &darr;</span>
             </button>
           </aside>
